Fix spacing in block quotation

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -304,3 +304,9 @@ figure img{
 #a-man-young-and-old > section{
 	break-after: page;
 }
+
+/* Block quote in endnote -- spacing */
+
+li div[epub|type~="z3998:verse"] {
+	margin-bottom:1em;
+}
